--- a/src/main/java/hospitalx/lingua/messagens.properties
+++ b/src/main/java/hospitalx/lingua/messagens.properties
@@ -7,3 +7,13 @@ sobrenome=Sobrenome:
 data-nascimento=Data de Nascimento
 municipio=Municipio
 provincia=Provincia
+sexo=Sexo
+novo-funcionario=Novo Funcionario
+gestao-funcionarios=Gest\u00e3o dos Funcionarios
+id=ID
+email=Email
+telefone=Telefone:
+rua=Rua
+casa=Casa
+bairro=Bairro
+distritito=Distritito
